# you need to add here any files you add to the api directory as well
files = [
  'library_root.rst',
  'client_api.rst',
  'components_api.rst',
  'core_api.rst',
  'device_api.rst',
  'endpoint_api.rst',
  'global_proxy_api.rst',
  'iterator_api.rst',
  'link_api.rst',
  'metadata_api.rst',
  'node_api.rst',
  'obj_interest_api.rst',
  'obj_manager_api.rst',
  'object_api.rst',
  'plugin_api.rst',
  'port_api.rst',
  'properties_api.rst',
  'proxy_interfaces_api.rst',
  'proxy_api.rst',
  'session_item_api.rst',
  'si_factory_api.rst',
  'si_interfaces_api.rst',
  'state_api.rst',
  'transitions_api.rst',
  'spa_type_api.rst',
  'spa_pod_api.rst',
  'wp_api.rst'
]

foreach file : files
  configure_file(input: file, output: file, copy: true)
endforeach
