# you need to add here any files you add to the toc directory as well
sphinx_files += files(
  'index.rst',
  'installing-wireplumber.rst',
  'running-wireplumber-daemon.rst',
  'configuration.rst',
  'daemon-logging.rst',
  'contributing.rst',
  'community.rst',
  'testing.rst',
  'releases.rst',
  'c_api.rst',
  'lua_api.rst',
)

subdir('c_api')
subdir('lua_api')
subdir('configuration')
