# you need to add here any files you add to the toc directory as well
sphinx_files += files(
  'installing-wireplumber.rst',
  'running-wireplumber-daemon.rst',
  'daemon-configuration.rst',
  'daemon-logging.rst',
  'contributing.rst',
  'community.rst',
  'testing.rst',
  'lua_api.rst'
)

subdir('lua_api')
